<resources>
    <string name="app_name">Meet Friends</string>

    <string name="No_INTERNET_CONNECTION">No Internet Connection</string>
    <string name="timeouterror">Timeout Please Retry</string>
    <string name="defaulterror">Something wrong Please Retry</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="forgotpassword">Forgot password</string>
    <string name="log_in">Log in</string>
    <string name="create_account">Create Account</string>
    <string name="be_together_anytime_anywhere">Be together, anytime, anywhere</string>
    <string name="email_phone">Email/Phone</string>
    <string name="your_email_or_phone">Your email or phone</string>
    <string name="password">Password</string>
    <string name="your_password">Your password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="remember_me">Remember me</string>
    <string name="or">OR</string>
    <string name="don_t_have_any_account">Don\'t have any account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="registration">Registration</string>
    <string name="your_first_name">Your first name</string>
    <string name="last_name">Last Name</string>
    <string name="your_last_name">Your last name</string>
    <string name="email">Email</string>
    <string name="your_email">Your email or phone</string>
    <string name="phone_number">Phone Number</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="mm_dd_yyyy">MM/DD/YYYY</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="type_your_password">Type your password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="terms_privacy">I agree to terms conditions and privacy policies.</string>
    <string name="register">Register</string>
    <string name="alredy_acc">Already have account?</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="empty_first_name">Please enter first name</string>
    <string name="empty_last_name">Please enter last name</string>
    <string name="enterEmailAddress">Please enter email address</string>
    <string name="enterValidEmail">Please enter valid email</string>
    <string name="empty_password">Please enter password</string>
    <string name="enter_valid_password">Please enter valis password</string>
    <string name="check_internet_connection">Please check your internet connection</string>
    <string name="unknownError">Unknown error</string>
    <string name="home">Home</string>
    <string name="messages">Messages</string>
    <string name="chats">Chat</string>
    <string name="videos">Videos</string>
    <string name="live">Live</string>
    <string name="my_challenge">My Challenge</string>
    <string name="paswrd_should_match">Confirm password should be match with password</string>
    <string name="empty_ph_no">Please enter mobile number</string>
    <string name="name">Name</string>
    <string name="select_dob">Please select dob</string>
    <string name="select_gender">Please select gender</string>
    <string name="accept_privacy_policy">Please accept terms conditions and privacy policy</string>
    <string name="login_with_google">Login with Google</string>
    <string name="empty_old_pass">Please enter old password</string>
    <string name="empty_new_pass">Please enter new password</string>
    <string name="invalid_aceess_token">Invalid access token</string>
    <string name="enter_valid_ph">Mobile no should have 10 digits</string>
    <string name="recover_password">Recover Password</string>
    <string name="name_new">Ariana Grandat</string>
    <string name="enter_comment">Enter Comment</string>
    <string name="no_comments_available">No Comments Available</string>
    <string name="addToFriend">Add To Your Post</string>
    <string name="likes">Likes</string>
    <string name="writeComment">Write Your Comment</string>

    <string name="need_storage_permission">Storage Permission required for better User Experience</string>
    <string name="need_camera_permission">Camera permission required for better User Experience</string>
    <string name="need_Location_permission">Location Permission required for better User Experience</string>
    <string name="profile">Profile</string>
    <string name="complete_profile">Complete Profile</string>
    <string name="firstName">First Name</string>
    <string name="current_city">Current City</string>
    <string name="education">Education</string>
    <string name="work">Work</string>
    <string name="relationShip">Relationship Status</string>
    <string name="single">Single</string>
    <string name="married">Married</string>
    <string name="unMarried">UnMarried</string>
    <string name="hobbies">Hobbies</string>
    <string name="submit">Submit</string>
    <string name="empty_current_city">Empty Current City.</string>
    <string name="empty_education">Please add your education.</string>
    <string name="empty_dob">Please enter your date of birth.</string>
    <string name="empty_work">Please add your work.</string>
    <string name="empty_hobbies">Please enter your hobbies.</string>
    <string name="empty_gender">Please select your gender.</string>
    <string name="empty_marriage_status">Please enter your marriage status.</string>
    <string name="pleaseSelectProblem">Please Select a Problem to continue.</string>
    <string name="reportText">You can report the post after selecting a problem</string>
    <string name="saveTo">Save To</string>
    <string name="save">SAVE</string>
    <string name="addFriend">Add Friend</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="friends">Friends</string>
    <string name="chat">Chat</string>
    <string name="photos">Photos</string>
    <string name="posts">Posts</string>
    <string name="About">About</string>
    <string name="suggest_friend">Suggested Friends</string>
    <string name="image_empty">Image Empty</string>
    <string name="homeTown">Home Town</string>
    <string name="editProfile">Edit Profile</string>
    <string name="logOut">Log Out</string>
    <string name="landing">Landing</string>
    <string name="valid_password">"Password should has One capital letter, one special letter and one number. "</string>
    <string name="detail_fragment">Detail Fragment</string>
    <string name="otp">OTP</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="verify">Verify</string>
    <string name="otp_is_empty">Please write otp number</string>
    <string name="otp_reset">OTPReset</string>
    <string name="add_profile_picture">Add Profile Picture</string>
    <string name="add_cover_picture">Add Cover Image</string>
    <string name="profile_fragment">Profile Image</string>
    <string name="cover_fragment">Cover Image</string>
    <string name="your_api_key">AIzaSyACxN9HzDq2zbdVp93Lq1KZm8LV4M2cykk</string>
    <string name="earning_account">Earning Account</string>
    <string name="settings">Settings</string>
    <string name="gift_gallery">Gift Gallery</string>
</resources>