<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/destination_home"
        android:icon="@drawable/home_selector"
        android:title="@string/home" />
    <item
        android:id="@+id/destination_messages"
        android:icon="@drawable/chat_menu_selector"
        android:title="@string/messages" />
   <!-- <item
        android:id="@+id/destination_chats"
        android:icon="@drawable/chat_menu_1_selector"
        android:title="@string/chats" />-->
    <item
        android:id="@+id/destination_video"
        android:icon="@drawable/video_selector"
        android:title="@string/videos" />

    <item
        android:id="@+id/destination_live"
        android:icon="@drawable/live_selector"
        android:title="@string/live" />

    <item
        android:id="@+id/destination_my_challenge"
        android:icon="@drawable/challenge_selector"
        android:title="@string/my_challenge" />
</menu>