<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/ic_login_bg_with_couple"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_back_black"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/metropolis_bold"
            android:text="@string/editProfile"
            android:textColor="@color/black_color"
            android:textSize="16dp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="170dp">

                <ImageView
                    android:id="@+id/ivCover"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:background="@drawable/drawable_background_translate_square"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/ivCoverUploadImage"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/ic_camera"
                    app:layout_constraintBottom_toBottomOf="@id/ivCover"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    app:layout_constraintEnd_toEndOf="parent" />

                <RelativeLayout
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:background="@drawable/drawable_background_translate_square"
                    app:layout_constraintBottom_toBottomOf="@+id/ivCover"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivCover">


                    <ImageView
                        android:id="@+id/ivProfile"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_gravity="center"
                        android:scaleType="fitXY" />

                    <ImageView
                        android:id="@+id/ivUploadImage"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/ic_camera" />
                </RelativeLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:textColor="@color/dark_grey"
                    android:text="@string/firstName"/>
                <EditText
                    android:id="@+id/edtFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="4dp"
                    android:singleLine="true"
                    android:paddingStart="10dp"
                    android:background="@drawable/drawable_edit_text_profile"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:textColor="@color/dark_grey"
                    android:text="@string/last_name"/>
                <EditText
                    android:id="@+id/edtLastName"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="4dp"
                    android:singleLine="true"
                    android:paddingStart="10dp"
                    android:background="@drawable/drawable_edit_text_profile"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:textColor="@color/dark_grey"
                    android:text="@string/current_city"/>
                <EditText
                    android:id="@+id/edtCurrentCity"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:singleLine="true"
                    android:layout_marginTop="4dp"
                    android:paddingStart="10dp"
                    android:background="@drawable/drawable_edit_text_profile"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:textColor="@color/dark_grey"
                    android:text="@string/education"/>
                <EditText
                    android:id="@+id/edtEducation"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="4dp"
                    android:singleLine="true"
                    android:paddingStart="10dp"
                    android:background="@drawable/drawable_edit_text_profile"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:textColor="@color/dark_grey"
                    android:text="@string/work"/>
                <EditText
                    android:id="@+id/edtWork"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="4dp"
                    android:singleLine="true"
                    android:paddingStart="10dp"
                    android:background="@drawable/drawable_edit_text_profile"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:fontFamily="@font/metropolis_medium"
                    android:text="@string/gender"
                    android:textColor="@color/dark_grey"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view_dob" />


                <RadioGroup
                    android:id="@+id/rg_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_gender">

                    <RadioButton
                        android:id="@+id/rb_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:paddingStart="@dimen/_8sdp"
                        android:paddingEnd="@dimen/_5sdp"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/rb_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:paddingStart="@dimen/_8sdp"
                        android:paddingEnd="@dimen/_5sdp"
                        android:text="@string/female" />

                    <RadioButton
                        android:id="@+id/rb_other"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:paddingStart="@dimen/_8sdp"
                        android:paddingEnd="@dimen/_5sdp"
                        android:text="@string/other" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:textColor="@color/dark_grey"
                    android:text="@string/date_of_birth"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp">
                    <EditText
                        android:id="@+id/edtDateOfBirth"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="4dp"
                        android:singleLine="true"
                        android:layout_toLeftOf="@+id/ivDob"
                        android:paddingStart="10dp"
                        android:background="@drawable/drawable_edit_text_profile"/>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivDob"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="10dp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/ic_calendar" />

                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tvRelationShip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:fontFamily="@font/metropolis_medium"
                    android:text="@string/relationShip"
                    android:textColor="@color/dark_grey"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view_dob" />


                <RadioGroup
                    android:id="@+id/rgRelationship"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_gender">

                    <RadioButton
                        android:id="@+id/single"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/single" />

                    <RadioButton
                        android:id="@+id/married"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/married" />

                    <RadioButton
                        android:id="@+id/unMarried"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/unMarried" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:textColor="@color/dark_grey"
                    android:text="@string/hobbies"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewHobbies"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:visibility="gone"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="horizontal"/>
                <EditText
                    android:id="@+id/edtHobbies"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="4dp"
                    android:singleLine="true"
                    android:paddingStart="10dp"
                    android:background="@drawable/drawable_edit_text_profile"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tvSubmit"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:textSize="14dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:background="@color/black_color"
                    android:textColor="@color/white_color"
                    android:text="@string/submit"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/avi"
        style="@style/AVLoadingIndicatorView"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:indicatorColor="@color/black_color"
        app:indicatorName="BallTrianglePathIndicator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/flContainerFriend"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>